# Runner

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  MIGRATION.md  batch_convert_files_task.py  batch_upload_json_task.py  bootstrap.py  code_to_json_task.py  delete_source_task.py  hybridgraph_health_task.py  migrate_jsondoc_to_hybrid.py  migrate_to_hybrid.py  pyproject.toml  requirements-dev.txt  runner.py  schema.sql  schema_stack.sql  stack_runner.py  sync_to_hybrid_task.py  test_sync_data.json  text_to_json_task.py  upload_dual_task.py  upload_jsongraph_task.py
.claude/agents/: config-creator.md  dependency-analyzer.md  directory-scaffolder.md  duplication-finder.md  module-migrator.md
docs/: README.md  agent-workflow.md  cypher-patterns.md  graph-quick-ref.md  hybridgraph-improvements.md  neo4j-schema.md  stack-runner.md  sync-system.md  system-diagrams.md  task-reference.md  unified-agent-runner-architecture.md
scripts/: setup_auto_sync.py
src/runner/: __init__.py  cli.py
src/runner/core/: __init__.py  runner.py  stack_runner.py
src/runner/db/migrations/: add_task_requests.py  migrate_add_request_id.py  migrate_identifiers_to_hybrid.py  (+1 more)
src/runner/hybridgraph/: __init__.py  delete.py  gc.py  health.py  migrate.py  queries.py  reader.py  sync.py
src/runner/mcp/: __init__.py  server.py
src/runner/processor/: __init__.py  daemon.py
src/runner/tasks/: __init__.py
src/runner/triggers/: __init__.py  cascade_rules.py  setup.py
src/runner/utils/: __init__.py  hashing.py  neo4j.py
tests/: conftest.py
tests/test_core/: test_cli.py  test_stack_runner.py
tests/test_hybridgraph/: test_fixes.py  test_queries.py
tests/test_integration/: __init__.py  test_agent_workflow.py
tests/test_tasks/: test_converters.py  test_upload.py
tests/test_utils/: test_hashing.py  test_neo4j.py
(+13 files in other folders)
