[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runner"
version = "0.1.0"
description = "Task execution framework with LIFO stack processing and Neo4j graph database integration"
readme = "docs/README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Runner Project"}
]
keywords = ["task-runner", "neo4j", "graph-database", "etl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "neo4j>=5.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
yaml = [
    "PyYAML>=6.0",
]

[project.scripts]
runner = "runner.cli:main"
stack-runner = "runner.core.stack_runner:main"
runner-processor = "runner.processor.daemon:main"
runner-mcp = "runner.mcp.server:main"
runner-triggers = "runner.triggers.setup:main"
runner-cascade = "runner.triggers.cascade_rules:main"

[project.urls]
Repository = "https://github.com/runner/runner"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
